--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -17,6 +17,9 @@
             </div>
           </header>
           <section class="card-body markdown">
+            <p>
+              <iframe src="https://anchor.fm/arkbfm/embed/episodes/{{ page.audio_url }}" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+            </p>
             <h2>
               内容紹介
             </h2>
